k8s/12-kafka.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kafka
  namespace: fintech
spec:
  serviceName: kafka
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
        - name: kafka
          image: confluentinc/cp-kafka:7.4.0
          ports:
            - containerPort: 29092
            - containerPort: 9092
            - containerPort: 29093
          volumeMounts:
            - name: kafka-data
              mountPath: /var/lib/kafka/data
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "1000m"
  volumeClaimTemplates:
    - metadata:
        name: kafka-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: fintech
spec:
  selector:
    app: kafka
  ports:
    - name: plaintext
      port: 29092
      targetPort: 29092
    - name: plaintext-host
      port: 9092
      targetPort: 9092
    - name: controller
      port: 29093
      targetPort: 29093
  type: ClusterIP
