k8s/14-pgadmin.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin
  namespace: fintech
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgadmin
  template:
    metadata:
      labels:
        app: pgadmin
    spec:
      containers:
        - name: pgadmin
          image: dpage/pgadmin4:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: pgadmin
  namespace: fintech
spec:
  selector:
    app: pgadmin
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30050
  type: NodePort
