k8s/20-config-server.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: config-server
  namespace: fintech
spec:
  replicas: 1
  selector:
    matchLabels:
      app: config-server
  template:
    metadata:
      labels:
        app: config-server
    spec:
      containers:
        - name: config-server
          image: fintech-microservices-config-server:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8888
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8888
            initialDelaySeconds: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8888
            initialDelaySeconds: 60
            periodSeconds: 15
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: config-server
  namespace: fintech
spec:
  selector:
    app: config-server
  ports:
    - port: 8888
      targetPort: 8888
  type: ClusterIP
