k8s/30-user-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: fintech
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service
          image: fintech-microservices-user-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8091
          readinessProbe:
            tcpSocket:
              port: 8091
            initialDelaySeconds: 30
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 8091
            initialDelaySeconds: 60
            periodSeconds: 15
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: fintech
spec:
  selector:
    app: user-service
  ports:
    - port: 8091
      targetPort: 8091
  type: ClusterIP
