k8s/31-deposit-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deposit-service
  namespace: fintech
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deposit-service
  template:
    metadata:
      labels:
        app: deposit-service
    spec:
      containers:
        - name: deposit-service
          image: fintech-microservices-deposit-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8070
          readinessProbe:
            tcpSocket:
              port: 8070
            initialDelaySeconds: 30
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 8070
            initialDelaySeconds: 60
            periodSeconds: 15
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: deposit-service
  namespace: fintech
spec:
  selector:
    app: deposit-service
  ports:
    - port: 8070
      targetPort: 8070
  type: ClusterIP
