k8s/33-transfer-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transfer-service
  namespace: fintech
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transfer-service
  template:
    metadata:
      labels:
        app: transfer-service
    spec:
      containers:
        - name: transfer-service
          image: fintech-microservices-transfer-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8475
          readinessProbe:
            tcpSocket:
              port: 8475
            initialDelaySeconds: 30
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 8475
            initialDelaySeconds: 60
            periodSeconds: 15
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: transfer-service
  namespace: fintech
spec:
  selector:
    app: transfer-service
  ports:
    - port: 8475
      targetPort: 8475
  type: ClusterIP
