k8s/34-notification-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
  namespace: fintech
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      containers:
        - name: notification-service
          image: fintech-microservices-notification-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8040
          readinessProbe:
            tcpSocket:
              port: 8040
            initialDelaySeconds: 30
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 8040
            initialDelaySeconds: 60
            periodSeconds: 15
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: fintech
spec:
  selector:
    app: notification-service
  ports:
    - port: 8040
      targetPort: 8040
  type: ClusterIP
