k8s/35-settlement-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: settlement-service
  namespace: fintech
spec:
  replicas: 1
  selector:
    matchLabels:
      app: settlement-service
  template:
    metadata:
      labels:
        app: settlement-service
    spec:
      containers:
        - name: settlement-service
          image: fintech-microservices-settlement-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8060
          readinessProbe:
            tcpSocket:
              port: 8060
            initialDelaySeconds: 30
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 8060
            initialDelaySeconds: 60
            periodSeconds: 15
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: settlement-service
  namespace: fintech
spec:
  selector:
    app: settlement-service
  ports:
    - port: 8060
      targetPort: 8060
  type: ClusterIP
